--- a/android/build.gradle
+++ b/android/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.alibaba:fastjson:1.2.52'
 
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     //支付（以支付宝官网公布的百川版本为准）
     implementation 'com.alibaba.alipay:alipaySingle:20160825@jar'
 
