--- a/android/build.gradle
+++ b/android/build.gradle
@@ -51,7 +51,7 @@ dependencies {
 
     implementation 'com.android.support:appcompat-v7:27.1.1'
     //支付（以支付宝官网公布的百川版本为准）
-    implementation 'com.alibaba.alipay:alipaySingle:20160825@jar'
+    // implementation 'com.alibaba.alipay:alipaySingle:20160825@jar'
 
     //登陆
     implementation 'com.ali.auth.sdk:alibabauth_core:1.4.3@jar'
