--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: nautilus
-description: Nautilus is taobao sdk for flutter。
+description: Nautilus is taobao sdk for flutter
 version: 0.0.6
 author: JarvanMo <jarvan.mo@gmail.com>
 homepage: https://github.com/OpenFlutter/nautilus
